--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="small-grid">
 <!-- picnic -->
     <div class="small-items picnic"><img src="small-svgs/picnicbasket.svg"></div>
-   <div class="small-items picnic"><img src="small-svgs/sandwich.svg"></div>
+   <div class="small-items picnic"><img src="small-svgs/picnicsandwich.svg"></div>
   <div class="small-items picnic"><img src="small-svgs/picnicboard.svg"></div>
   <div class="small-items picnic"><img src="small-svgs/grocerybag.svg"></div>
   <div class="small-items picnic"><img src="small-svgs/applebasket.svg"></div>
@@ -53,16 +53,16 @@
       
 <!-- cafe snacks -->
   <div class="small-items cafe"><img src="small-svgs/pudding.svg"></div>
-  <div class="small-items cafe"><img src="small-svgs/fruittart.svg"></div>
   <div class="small-items cafe"><img src="small-svgs/cake.svg"></div>
+  <div class="small-items cafe"><img src="small-svgs/swissroll.svg"></div>
   <div class="small-items cafe"><img src="small-svgs/poundcake.svg"></div>
+  <div class="small-items cafe"><img src="small-svgs/doughnut.svg"></div>
   <div class="small-items cafe"><img src="small-svgs/menu.svg"></div>
 
 
 
       <!-- kitchen -->
-<!--   <div class="small-items kitchen"><img src="/small-svgs/emptyjar.svg"></div> -->
-  <div class="small-items kitchen"><img src="small-svgs/cookiejarbrown.svg"></div>
+
 
 <!-- cafe drinks -->
   <div class="small-items cafe"><img src="small-svgs/icecoffee.svg"></div>
@@ -73,7 +73,11 @@
   <div class="small-items cafe"><img src="small-svgs/madras.svg"></div>
 
 
+<!-- diner -->
+  <div class="small-items diner"><img src="small-svgs/dinersandwich.svg"></div>
+   <div class="small-items cafe"><img src="small-svgs/breakfastplate.svg"></div>
 
+   <div class="small-items kitchen"><img src="small-svgs/spaghetti.svg"></div>
       
 <!-- japanese restaurant -->
 
@@ -96,8 +100,8 @@
   <figure>
     <a href="#" class="close"></a>
      <figcaption>
-      <a href="https://one.caroi.repl.co/">homepage</a> <br> <br>
-     <a href="https://one.caroi.repl.co/">terms of use</a>
+      <a href="https://one.caroi.repl.co/">about</a> <br> <br>
+     <a href="https://one.caroi.repl.co/">works</a>
     </figcaption>
   </figure>
 </div>
