--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </a>
     </div>
     <div class="right-header-desktop">
-      <a href="https://one.caroi.repl.co/"> homepage </a>
+      <a href="https://carolinesaito.github.io/"> homepage </a>
       <img src="misc/seastuff.svg">
     </div>
   
@@ -100,8 +100,8 @@
   <figure>
     <a href="#" class="close"></a>
      <figcaption>
-      <a href="https://one.caroi.repl.co/">about</a> <br> <br>
-     <a href="https://one.caroi.repl.co/">works</a>
+      <a href="https://carolinesaito.github.io/">about</a> <br> <br>
+     <a href="https://carolinesaito.github.io/works/">works</a>
     </figcaption>
   </figure>
 </div>
